# Final_Project

meca500_demos/: package.xml  setup.cfg  setup.py
meca500_demos/config/: objects.yaml
meca500_demos/launch/: planningscene.launch.xml
meca500_demos/meca500_demos/: planningscene.py  scene_node.py
meca500_hardware/: CMakeLists.txt  meca500_hardware.xml  package.xml
meca500_hardware/include/meca500_hardware/: meca500_controller.hpp
meca500_hardware/src/: meca500_controller.cpp
meca500_moveit/: .setup_assistant  CMakeLists.txt  package.xml
meca500_moveit/config/: initial_positions.yaml  joint_limits.yaml  joint_offsets.yaml  kinematics.yaml  meca500.ros2_control.xacro  meca500.srdf  meca500.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
meca500_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
meca500_robot/: package.xml  setup.cfg
meca500_robot/assets/: link_0__base.stl  link_1.stl  link_4.part  link_5_1.part  link_6__flange.part
meca500_robot/meshes/: link_0__base.part  link_1.part  link_2.stl  link_4.stl
meca500_robot/urdf/: config.json  robot.ros2_control.xacro  robot.urdf.xacro
mecha500_robot/: setup.py
mecha500_robot/meshes/: link_2.part  link_3.part  link_3.stl  link_5.part  link_5.stl  link_6__flange.stl
mecha500_robot/urdf/: robot.ros2_control.xacro  robot.urdf  robot.urdf.xacro
